[package]
name = "bstruct"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "bstruct"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]

[[bin]]
name = "bstructc"
path = "src/main.rs"

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
glob = "0.3.0"

[build-dependencies]
cbindgen = "0.20.0"