[package]
name = "bstruct"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "bstruct"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]

[[bin]]
name = "bstructc"
path = "src/main.rs"

[dependencies]
pest = "2.7.3"
pest_derive = "2.7.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
glob = "0.3.1"

[build-dependencies]
cbindgen = "0.26.0"