[package]
name = "bstruct"
version = "0.1.0"
edition = "2021"

[lib]
name = "bstruct"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]

[[bin]]
name = "bstructc"
path = "src/main.rs"

[dependencies]
pest = "2.7.15"
pest_derive = "2.7.15"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
walkdir = "2.5.0"
